--- a/CadeMeuTroco.Core/CadeMeuTroco.Core.csproj
+++ b/CadeMeuTroco.Core/CadeMeuTroco.Core.csproj
@@ -44,21 +44,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CadeMeuTrocoInterceptor.cs" />
     <Compile Include="CadeMeuTrocoManager.cs" />
     <Compile Include="DataContracts\AbstractRequest.cs" />
     <Compile Include="DataContracts\CalculateRequest.cs" />
     <Compile Include="DataContracts\CalculateResponse.cs" />
     <Compile Include="DataContracts\ChangeData.cs" />
     <Compile Include="DataContracts\Report.cs" />
+    <Compile Include="ICadeMeuTrocoManager.cs" />
     <Compile Include="Processors\AbstractProcessor.cs" />
     <Compile Include="Processors\BillProcessor.cs" />
     <Compile Include="Processors\CandyProcessor.cs" />
     <Compile Include="Processors\CoinProcessor.cs" />
     <Compile Include="Processors\GoldProcessor.cs" />
+    <Compile Include="Processors\IProcessor.cs" />
     <Compile Include="Processors\ProcessorFactory.cs" />
     <Compile Include="Processors\SilverProcessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util\ConfigurationUtility.cs" />
+    <Compile Include="Util\EventViewerLog.cs" />
     <Compile Include="Util\FileLog.cs" />
     <Compile Include="Util\IConfigurationUtility.cs" />
     <Compile Include="Util\ILog.cs" />
