Adicionado suporte a banco de dados.

--- a/CadeMeuTroco/App.config
+++ b/CadeMeuTroco/App.config
@@ -3,7 +3,12 @@
 
   <appSettings>
     <add key="LogPath" value="C:\Logs\" />
+    <add key="AccessKey" value="{BE3A4295-538D-4A41-8B6F-4842C82FBF0A}"/>
   </appSettings>
+
+  <connectionStrings>
+    <add name="DatabaseConnection" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=CadeMeuTroco;Data Source=TREINAMENTO\SQLEXPRESS" />
+  </connectionStrings>
 
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
